[package]
name = "utils"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "utils"

[features]
default=[]

[dependencies]
anchor-lang = {version="0.30.1", features = ["init-if-needed"]}
anchor-spl = {version= "0.30.1"}
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "=0.4.3"
spl-pod = "0.2.2"
